# snek_game

./: .README.md  .gitignore  LICENSE  README.md  audio.py  board.py  driver.py  externs.py  game.py  handler.py  lv1.txt  lv11.txt  lv13.txt  lv15.txt  lv5.txt  main.py  menu.py  pyproject.toml  screen.py  snake.py  snakeDEV2.py  snakeDEV3.py  tester.py  wyrm
data/: high.txt  highscores.txt  highscores2.txt  lv16.txt  lv7.txt
src/snek/: main.py  snek.py.tmp  tester.py  wyrm
src/snek.egg-info/: PKG-INFO  SOURCES.txt
src/snek/resources/levels/: lv12.txt
src/snek_game/: action.py  audio.py  drawable.py  externs.py  game.py  main.py  menu.py  screen.py
src/snek_game/resources/levels/: lv14.txt  lv2.txt  lv3.txt  lv4.txt  lv6.txt  lv8.txt  lv8a.txt  lv9.txt  lvTemp.txt  lvblank.txt
src/wyrm.egg-info/: PKG-INFO  SOURCES.txt
tmp/: temp.txt
