[project]
name = "snek_game"
version = "0.0.2.dev1"
authors = [
  { name="Ben Kushigian", email="bkushigian@gmail.com" },
]
description = "A bad snake variant"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pygame>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/bkushigian/wyrm"
Issues = "https://github.com/bkushigian/wyrm/issues"

[project.scripts]
snek = "snek_game.main:main"